<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvApSsid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tvApSsidTitle"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvApSssidConnected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:ems="10"
                android:singleLine="true" >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvnewApSsid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tvnewApSsidTitle"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tvnewApSssidConnected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:ems="10"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvoldApPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tvoldPasswordTitle"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtoldApPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true"
                android:text=""
                tools:ignore="TextFields" >

            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvnewApPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tvnewPasswordTitle"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtnewApPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true"
                android:text=""
                tools:ignore="TextFields" >

            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvnewaginApPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tvnewaginPasswordTitle"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtnewaginApPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true"
                android:text=""
                tools:ignore="TextFields" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switchIsSsidHiddenTitle"
                android:textSize="24sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switchIsSsidHidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spinnerTaskResultCountTitle"
                android:textSize="24sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinnerTaskResultCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConfirmTitle"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>
